force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/LLC_BI__StatisticsConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Statistics Configuration Settings</description>
    <label>Statistics Configuration</label>
</CustomObject>