force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Additional_Parameters_3__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Additional_Parameters_3__c</fullName>
    <description>This field is optional and manually populated by administrators. This field allows for overflow of the Additional Parameters 3 field and concatenates to form one long parameter if needed. This field is used to specify additional parameters that influence the performance of statistic calculations. The specified parameters are dependent on the business logic class.</description>
    <inlineHelpText>This field allows for overflow of the Additional Parameters 3 field and concatenates to form one long parameter if needed.</inlineHelpText>
    <label>Additional Parameters 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>