force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Additional_Parameters__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Additional_Parameters__c</fullName>
    <description>This field is optional and is manually populated. This field allows additional parameters to be specified that influence how the statistic calculation is performed. The format and the possible parameters that can be specified are dependent on the business logic class. Refer to the documentation of the business logic class for more details on this field.</description>
    <inlineHelpText>Free form field to allow additional parameters to be configured for an entry</inlineHelpText>
    <label>Additional Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>