force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Business_Logic_Class__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Business_Logic_Class__c</fullName>
    <description>This field is required and is manually populated. This field contains the name of the Business Logic Apex Class that will be performing the calculation of the statistic. For example, LLC_BI.StatisticsExposureCalculator.</description>
    <inlineHelpText>Name of the class that contains the business logic to execute for this configuration item.</inlineHelpText>
    <label>Business Logic Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>