force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Calculate_Involvements_With_Connections__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Calculate_Involvements_With_Connections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators manually populate this optional field. When enabled, the statistic calculation includes loans associated with an account and loans associated to an account’s connections in the calculation. When disabled, either loans associated via entity involvement are used in the calculation if “Depth” is null or loans associated to connected accounts are used in the calculation if “Depth” has a value. By default, it is disabled.</description>
    <inlineHelpText>Calculate Involvements with Connections</inlineHelpText>
    <label>Calculate Involvements with Connections</label>
    <type>Checkbox</type>
</CustomField>