force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Calculated_Field_Path__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Calculated_Field_Path__c</fullName>
    <description>Administrators manually populate this optional field. If Original Amount or Principal Balance are not in use for the statistic calculation, this field is used to specify the API path of the field being used. The path is written in the following format when the object is a parent of entity involvement: Object_API_Name_r.Field_API_Namec&quot;. If the field is on entity involvement, it is written in the following format: &quot;Field_API_Name_c.</description>
    <inlineHelpText>Calculated Field Path</inlineHelpText>
    <label>Calculated Field Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>