force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>This field is required and is manually populated. It indicates the category to which the statistic belongs, which is used to logically group statistics. The category is used by other components to determine which statistics to use or to display.</description>
    <inlineHelpText>Category for grouping related statistic configuration definitions</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>