force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Connection_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Connection_Role__c</fullName>
    <description>Administrators manually populate this field. This field specifies which connection roles to use when calculating exposure and should be used when using the Depth field. If a connection has a role not specified in this list, then the connected account&apos;s loans are not used in  the calculation.  This field is a comma-delineated list with no spaces. Default is null.</description>
    <label>Connection Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>