force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Depth__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Depth__c</fullName>
    <description>This field is admin only. It allows an admin to specify the number of self-referential records (ex: accounts connections) that can be used in the statistic. It is manually populated. It is optional.</description>
    <inlineHelpText>Allows an admin to specify the number of self-referential records (ex: accounts connections) that can be used in the statistic.</inlineHelpText>
    <label>Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>