force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Display_In_Read_Only_Total_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_In_Read_Only_Total_Exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a manually populated optional field to indicate what filter is applied when a user views a read-only view of the Total Exposure Visualforce page. Only one statistic configuration can be enabled with this checkbox per exposure type. By default, the checkbox is unchecked.</description>
    <inlineHelpText>This is a manually populated optional field to indicate what filter is applied when a user views a read-only view of the Total Exposure Visualforce page.</inlineHelpText>
    <label>Display in Read-Only Total Exposure</label>
    <type>Checkbox</type>
</CustomField>