force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Enable_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Enable_Exclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When used in tandem with &quot;Is Default Filter&quot;, it also controls whether the Exclude toggles displays for the Relationship table. This field should have the same configuration across all statistic configurations that share an Exposure Type.</description>
    <inlineHelpText>Administrators manually select this optional checkbox field. It controls whether excluded loans and debts should be removed from the exposure calculation.</inlineHelpText>
    <label>Enable Exclusion</label>
    <type>Checkbox</type>
</CustomField>