force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Enable_Manual_Calculation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Enable_Manual_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional field is manually selected. It is used to determine if the statistic is manually updated via a batch job. A manually updated statistic allows a user to initiate the recalculation. When enabled, the statistic is updated manually; when disabled the statistic does not update manually. It is disabled by default.</description>
    <inlineHelpText>Enables manual calculation of the statistic. A manually updated statistic allows a user to initiate the recalculation.</inlineHelpText>
    <label>Enable Manual Calculation</label>
    <type>Checkbox</type>
</CustomField>