force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Field_Set__c</fullName>
    <description>Admins use this text field to control the field set that displays in the columns on that statistic’s table. The field defaults to that exposure type’s default field set, but admins can change it to the API name of the field set that they wish to use instead.</description>
    <label>Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>