force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Filter_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Filter_Display_Order__c</fullName>
    <description>Administrators manually populate this optional field. This field controls and respects the display order of the filters on the Total Exposure page.</description>
    <inlineHelpText>Filter order used in the display of exposure stages.</inlineHelpText>
    <label>Filter Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>