force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Filter_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Filter_Name__c</fullName>
    <description>This field specifies the name of the exposure stage used to filter tables displayed.</description>
    <inlineHelpText>Key used to look up the name value.</inlineHelpText>
    <label>Filter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>