force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Is_Default_Filter__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Default_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This boolean checkbox field is used by admins. When true, it indicates if the selected exposure type should be the first to display within the type filter on that exposure’s table within Total Exposure.</description>
    <label>Is Default Filter</label>
    <type>Checkbox</type>
</CustomField>