force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Is_Table__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators use this checkbox field on the Statistic Configuration records to specify if it creates a table on Total Exposure. By default it is inactive; when it is active, a table is created.</description>
    <inlineHelpText>Use this field to specify if this statistic is a table on Total Exposure.</inlineHelpText>
    <label>Is Table</label>
    <type>Checkbox</type>
</CustomField>