force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Label_Key__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Label_Key__c</fullName>
    <description>This field is required and is manually populated. It contains the name of the custom label that will be used to describe the statistic when displayed to a user.</description>
    <inlineHelpText>Key used to look up the label value</inlineHelpText>
    <label>Label Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>