force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Object_Name__c</fullName>
    <description>This field is conditionally required and must be specified if the LLC_BI__Post_to_Parent_Object__c field is set to TRUE. It is manually populated. The field indicates the object type that contains the field (specified by LLC_BI__Field_Name__c) that will be updated with the value of the calculated statistic when the LLC_BI__Post_to_Parent_Object__c field is set to TRUE.</description>
    <inlineHelpText>Name of the underlying object where the output will be placed.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>