force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Post_to_Parent_Object_2__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Post_to_Parent_Object_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional and is manually populated. This field indicates if the statistic should also be stored on the parent object. If the field is not specified, it defaults to FALSE.</description>
    <inlineHelpText>Determines if the value should be posted to the owning object.</inlineHelpText>
    <label>Post to Parent Object 2</label>
    <type>Checkbox</type>
</CustomField>