force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Relative_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Relative_Display_Order__c</fullName>
    <description>This field is optional and is manually populated. It indicates the relative order in which to display the statistic when all the statistics in the group is displayed to the user.</description>
    <inlineHelpText>Relative order used in the automated display layout component</inlineHelpText>
    <label>Relative Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>