force-app/main/default/objects/LLC_BI__StatisticsConfiguration__c/fields/LLC_BI__Use_Calc_Field_Path_For_Renewals__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Use_Calc_Field_Path_For_Renewals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an optional boolean field used by administrators. When true, which is the default state, it controls if in progress renewals and modifications are included in the calculations for Total Exposure.</description>
    <label>Use Calc Field Path for Renewals</label>
    <type>Checkbox</type>
</CustomField>